se resuelven algunos code smells p3